# fastpubsub

./: .clineignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  app.py  docker-compose.yaml  justfile  pyproject.toml  send_message.py
.clinerules/: 01.introduction.md  02.starconsumers.md  03.faststream.md  04.tasks.md
.github/workflows/: pr_tests.yaml  release_github.yaml  release_pypi.yaml
docs/: basic_usage.md  save.md
docs/learn/: 01.intro-pubsub.md
docs/learn/tutorial/: 00.index.md  01.subscription.md  02.publishing.md
docs/scratch/: README2.md  fastapi_integration.md  logger.md  middlewares.md  observability.md  routers.md
examples/: 02_basic_subscriber_middlewares.py  03_basic_publisher_middlewares.py  03_subscriber_middlewares.py  04_publisher_middlewares.py  05_fastapi_integration.py  e3_01_routers.py
examples/basic_usage/: e1_01_basic_subscriber.py  e1_02_multiple_subscribers.py  e2_01_basic_publisher.py  e2_02_basic_publisher.py  e2_03_basic_publisher.py  e2_04_basic_publisher_message_formats.py  e2_04_message_formats.py  e3_01_linked_pubsub.py  e4_01_basic_fastapi_integration.py  e5_01_subscribers_max_messages.py
examples/middlewares/: 03_subscriber_middlewares.py  e1_01_subscriber_middlewares.py  e1_02_publisher_middlewares.py  e1_03_common_middlewares.py  e1_03_publisher_middlewares.py  e1_03_router_hierarchy_middlewares.py  e1_04_common_middlewares.py  e2_01_router_hierarchy_middlewares.py  e2_02_router_hierarchy_middlewares.py  e2_03_router_hierarchy_middlewares.py  middlewares.py
examples/routers/: e1_01_basic_router.py  e1_02_nested_routers.py
fastpubsub/: __about__.py  __init__.py  __main__.py  applications.py  baserouter.py  broker.py  builder.py  concurrency.py  configuration.py  datastructures.py  exceptions.py  logger.py  middlewares.py  observability.py  process.py  publisher.py  registrator.py  router.py  subscriber.py  types.py
fastpubsub/cli/: main.py  options.py  runner.py  utils.py
fastpubsub/clients/: builder.py  handlers.py  pub.py  pubsub.py  sub.py
fastpubsub/concurrency/: controller.py  ipc.py  manager.py  process.py  tasks.py  utils.py
fastpubsub/concurrency/workers/: manager.py  subscriber.py
fastpubsub/middlewares/: apm.py  base.py  gzip.py
fastpubsub/pubsub/: commands.py  publisher.py  subscriber.py
fastpubsub/routing/: base.py  base_router.py  router.py
fastpubsub/testing/: __init__.py
old/scripts/: tests.sh
old/starconsumers/: process.py
scripts/: format.sh  install-python.sh  install.sh  lint.sh  setup.sh  test-cov.sh  test-pipeline.sh  tests.sh
starconsumers/: __init__.py  app.py  application.py  applications.py  broker.py  cli.py  concurrency.py  consumer.py  consumers.py  datastructures.py  discover.py  exceptions.py  logger.py  main.py  middlewares.py  observability.py  process.py  publisher.py  registrator.py  router.py  subscriber.py  types.py
starconsumers/_internal/: cli.py  cli_beta.py  compat.py  types.py  utils.py
starconsumers/cli/: discover.py  main.py  runner.py
starconsumers/pubsub/: auth.py  callbacks.py  clients.py  handlers.py  pub.py  publisher.py  sub.py  subscriber.py  utils.py
tests/: conftest.py  test_applications.py  test_broker.py  test_broker_router.py  test_broker_router_include.py  test_cli.py  test_concurrency_utils.py  test_middleware_include.py  test_middleware_include_hierarchy.py  test_middlewares.py  test_observability.py  test_publish_message.py  test_publisher.py  test_pubsub_client.py  test_pubsub_clients.py  test_router.py  test_subscriber.py  test_subscription_builder.py  test_task_manager.py
